--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formação Liderança Antifrágil | Live Consultoria</title>
+    <title>Formação Liderança Antifrágil | Ecossistema Live</title>
     
     <!-- Critical CSS para performance (FCP < 50ms) -->
     <style>
@@ -310,7 +310,7 @@
 <body>
 
     <header class="container">
-        <h3 style="color:white; margin-bottom:10px; font-family:var(--font-secondary); letter-spacing: 1px; text-transform: uppercase; font-size: 0.9rem; opacity: 0.8;">Live Consultoria</h3>
+        <h3 style="color:white; margin-bottom:10px; font-family:var(--font-secondary); letter-spacing: 1px; text-transform: uppercase; font-size: 0.9rem; opacity: 0.8;">Ecossistema Live</h3>
         
         <h1>Liderança Antifrágil 2026</h1>
         <p class="hero-text">Desenvolva a mentalidade, as ferramentas e a influência estratégica para liderar no caos e formar sucessores.</p>
